Fix some spacing issues

--- a/sites/all/themes/siazen/css/styles.css
+++ b/sites/all/themes/siazen/css/styles.css
@@ -94,10 +94,6 @@ a:hover {
 	text-decoration: none;
 }
 
-h2 {
-	font-size: 2em;
-}
-
 .ctools-collapsible-content {
     background: #f7f7f7;
     border: 1px solid #ccc;
@@ -126,6 +122,9 @@ h2 {
     clear: both;
 }
 
+.form-item {
+    margin: 0;
+}
 
 thead th, th {
     background: #f7f7f7;
